src/tui/views/snapshots/awsui__tui__views__dashboard__tests__render_returns_snapshot_when_no_recent_services.snap
---
source: src/tui/views/dashboard.rs
expression: buffer_to_string(&terminal)
---
┌ awsui Dashboard | dev | us-east-1 ───────────────────────┐
│All Services                                              │
│────────────                                              │
│▶ Elastic Compute Cloud (EC2)                             │
│  Elastic Container Registry (ECR)                        │
│  Elastic Container Service (ECS)                         │
│  Simple Storage Service (S3)                             │
│  Virtual Private Cloud (VPC)                             │
│  Secrets Manager                                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 j/k:select  /:filter  Enter:open  q:quit
