src/tui/views/snapshots/awsui__tui__views__dashboard__tests__render_returns_snapshot_when_recent_services_exist.snap
---
source: src/tui/views/dashboard.rs
expression: buffer_to_string(&terminal)
---
┌ awsui Dashboard | production | ap-northeast-1 ───────────┐
│Recently Used                                             │
│─────────────                                             │
│▶ Elastic Compute Cloud (EC2)                             │
│  Simple Storage Service (S3)                             │
│                                                          │
│All Services                                              │
│────────────                                              │
│  Elastic Compute Cloud (EC2)                             │
│  Elastic Container Registry (ECR)                        │
│  Elastic Container Service (ECS)                         │
│  Simple Storage Service (S3)                             │
│  Virtual Private Cloud (VPC)                             │
│  Secrets Manager                                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 j/k:select  /:filter  Enter:open  q:quit
